--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p><a href="tel:01706940114">+1 5589 55488 55s</a></p>
+                <p><a href="#">+1 5589 55488 55s</a></p>
               </div>
 
             </div>
